Changes to be committed: 	modified:   .gradle/9.2.1/executionHistory/executionHistory.bin 	modified:   .gradle/9.2.1/executionHistory/executionHistory.lock 	modified:   .gradle/9.2.1/fileHashes/fileHashes.bin 	modified:   .gradle/9.2.1/fileHashes/fileHashes.lock 	modified:   .gradle/9.2.1/fileHashes/resourceHashesCache.bin 	modified:   .gradle/buildOutputCleanup/buildOutputCleanup.lock 	modified:   .gradle/buildOutputCleanup/cache.properties 	modified:   build.gradle.kts 	deleted:    build/libs/SimpleclansPlugin-1.0.0.jar 	new file:   build/reports/problems/problems-report.html